--- a/Hardware Project/Report-Hardware_Project.tex
+++ b/Hardware Project/Report-Hardware_Project.tex
@@ -99,11 +99,11 @@
 		
 		\title{
 			%	\logo{
-				Hardware Assignment - AI1110
+				Hardware Project - AI1110
 				%	}
 		}
-		\author{K.SaiTeja\\
-			AI22BTECH11014
+		\author{Mayank Parasramka\\
+			AI22BTECH11018
 		}	
 		
 \maketitle
