--- a/Hardware Project/Report-Hardware_Project.tex
+++ b/Hardware Project/Report-Hardware_Project.tex
@@ -18,6 +18,7 @@
 \usepackage[breaklinks=true]{hyperref}
 \usepackage{tkz-euclide} % loads  TikZ and tkz-base
 \usepackage{listings}
+\usepackage{caption}
 \DeclareMathOperator*{\Res}{Res}
 %\renewcommand{\baselinestretch}{2}
 \renewcommand\thesection{\arabic{section}}
@@ -96,26 +97,28 @@
 	\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
 	\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}		
 		\vspace{3cm}
-		
-		\title{
-			%	\logo{
-				Hardware Project - AI1110
-				%	}
-		}
-		\author{Mayank Parasramka\\
-			AI22BTECH11018
-		}	
-		
-\maketitle
+
+\title{
+%	\logo{
+\textbf{AI1110:} Probability and Random Variable\\
+Hardware Project
+%	}
+}
+\author{Mayank Parasramka$^{*}$\\AI22BTECH11018% <-this % stops a space
+	\thanks{*The student is with the Department
+		of Artificial Intelligence, Indian Institute of Technology, Hyderabad,
+		502285, India.\\ e-mail: ai22btech11018@iith.ac.in.}
+	
+}
 
 \newpage
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
-\textbf{Description:-} \raggedright\\
-\textbf{In my assignment I've made a Random number generator using decoder, flip flops, XOR gate, 555IC}
+
+\raggedright\maketitle{\huge \textbf{Project Report:}}
 \tableofcontents
-\section{Components used}
+\section{Components used}	
 \begin{enumerate}[label=(\roman*)]
 \item Breadboard
 \item Seven Segment Display - Common Anode
